<resources>
    <string name="app_name">HelloMobil</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="button_Register">Cadastrar</string>
    <string name="button_Validate">Validar</string>
    <string name="button_Login">Logar</string>
    <string name="hint_editText_Email">Digite seu e-mail</string>
    <string name="hint_editText_Password">Digite sua senha</string>
    <string name="textView_Register">Não tem conta? Cadastre-se</string>
    <string name="hint_editText_Name">Digite seu nome</string>
    <string name="hint_editText_email">Digite seu email</string>
    <string name="item_exit">Sair</string>

    <string name="item_search">Pesquisar</string>
    <string name="item_settings">Configurações</string>
    <string name="item_add">Adicionar</string>
    <string name="item_about">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
