<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.decisionmind.pedro.hellomobil.activity.MainActivity">

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_person_add"
        android:title="@string/item_add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_settings"
        android:title="@string/item_settings"
        app:showAsAction="never"/>


    <item android:id="@+id/item_search"
        android:title="@string/item_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_exit"
        android:title="@string/item_exit"
        app:showAsAction="never"/>

</menu>